--- a/webpack/src/index.html
+++ b/webpack/src/index.html
@@ -7,7 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  Hello, World from HTML!
+  Este es el nuevo index
   <script src="main.js"></script>
+  <img id="logo" alt="logo">
+  <img id="banana" alt="a banana">
 </body>
 </html>
