moves files to correct directory. Adds html-loader in WebPack example

--- a/webpack/src/index.html
+++ b/webpack/src/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
   Este es el nuevo index
-  <script src="main.js"></script>
-  <img id="logo" alt="logo">
-  <img id="banana" alt="a banana">
+  <img id="logo" src="../img/logo.png" alt="logo">
+  <img id="banana" src="../img/banana.png" alt="a banana">
 </body>
 </html>
